--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,81 @@
-.visually-hidden {
-    display: none;
-}
-
 * {
     font-family: monospace;
 }
 
+body {
+    background-color: rgb(58, 4, 58);
+}
 
 .container {
-    width: 400px;
-    height: 500px;
-    margin: auto;
+    position: absolute;
+    width: 300px;
+    height: 400px;
     text-align: center;
-    background-color: bisque;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(32, 20, 26);
 }
 
-.main {
-    width: 400px;
-    height: 500px;
-    padding-top: 10px;
+.city {
+    font-size: 3em;
+    font-weight: bold;
+    color: white;
+    padding-top: 50px;
 }
 
-.show-weather-button {
-    background-color: whitesmoke;
-    height: 40px;
-    width: 150px;
-    font-size: 15px;
+.icon > img {
+    width: 100px;
 }
 
-.country-input {
-    outline: none;
-    height: 35px;
-    width: 200px;
-    font-size: 15px;
+hr {
+    width: 75%;
+    background-color: gray;
 }
 
-.icon {
-    width: 100%;
-    height: 210px
+.degrees {
+    color: white;
+    font-size: 60px;
+    font-weight: bold;
 }
 
-.data-block {
-    width: 185px;
-    height: 185px;
-    background-color: red;
+.description {
+    color: white;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.country-picker {
+    position: fixed;
+    top: 5px;
+    left: calc(50% - 10px);
+    transform: translateX(-50%);
+}
+
+.country-picker > input {
+    width: 250px;
+    height: 30px;
+    font-size: 20px;
     float: left;
-    margin-left: 10px;
+    outline: 0;
 }
 
-.country-name {
-    width: 100%;
-    font-size: 25px;
+.country-picker > .btn {
+    background-color: darkgray;
+    width: 50px;
+    height: 36px;
+    position: fixed;
+    z-index: 5;
+    left: 230px
 }
 
+.country-picker > .btn > img {
+    width: 34px;
+    padding-left: 10px;
+    padding-top: 2px;
+    filter: brightness(0.1);
+}
+
+.country-picker > .btn:hover {
+    filter: brightness(1.2);
+}
